Fix text vertical align

--- a/static/css/section/_homepage.scss
+++ b/static/css/section/_homepage.scss
@@ -493,8 +493,8 @@ body.homepage .row--cloud-products {
   }
 
   @media only screen and (min-width: 984px) {
-    padding-top: 220px;
-    padding-bottom: 200px;
+    padding-top: 180px;
+    padding-bottom: 170px;
     background-image: url('#{$asset-server}f27582be-image-cloud-static.jpg');
     background-repeat: no-repeat;
     background-position: 77% center;
